[project]
name = "cara-poetry-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Cara Colker-Eybel",email = "ccolkereybel@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "numpy (>=2.3.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "cara_poetry_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
