[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "todolist_ccolkereybel"
version = "0.1.0"
authors = [{ name = "Cara Colker-Eybel", email = "ccolkereybel@gmail.com" }]
description = "A fantastic todo list application."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/ccolkereybel/Todo-List"
Issues = "https://github.com/ccolkereybel/Todo-List"
