[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

# code omitted for brevity

[project]
name = "todolist_ccolkereybel"
version = "0.1.0"
authors = [
    {name = "Cara Colker-Eybel", email = "ccolkereybel@gmail.com"},
]
description = "A fantastic todo list application."
readme = "README.md"
requires-python = ">=3.8"
license = {
    text = "MIT"
}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    # More classifiers can be found at
]
dependencies = []
